# text-to-speech

./: .gitignore  README.md  pyproject.toml
src/: tts_generator.py
